<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="come_in">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="add_to_cart">В корзину</string>
    <string name="to_cart">В корзине</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="uikit_delete">Удалить</string>
    <string name="count_text">сум/шт</string>
    <string name="your_order">Ваш заказ</string>
    <string name="checkout">Оформить заказ</string>
    <string name="address">Адрес:</string>
    <string name="discount">Скидка</string>
    <string name="to_pay">К оплате</string>
    <string name="menu_text">Меню</string>
    <string name="basket_text">Корзина</string>
    <string name="basket_count_text">Корзина (%1$s)</string>
    <string name="order_text">Мои заказы</string>
    <string name="profile_text">Профиль</string>
    <string name="about_text">О ресторане</string>
    <string name="settings_text">Настройки</string>
    <string name="save_text">Сохранить</string>
    <string name="geolocation_text">Моя позиция</string>

    <string name="insert_products">Товары (%1$s)</string>
    <string name="insert_sum">%1$s сум</string>
    <string name="insert_sum_count">%1$s сум/шт</string>
    <string name="insert_count_sum_all">%1$s шт - %2$s сум</string>

    <string name="description_cover">Изображение</string>

    <string name="dialog_button_positive">ОК</string>

    <string name="order_number">Заказ № %1$s</string>
    <string name="order_status_created">Создан</string>
    <string name="order_status_working">В работе</string>
    <string name="order_status_delivered">Доставляется</string>
    <string name="order_status_completed">Завершен</string>
    <string name="order_status_canceled">Отменено</string>
</resources>