<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu"
        android:enabled="true"
        android:icon="@drawable/ic_16_menu"
        android:title="@string/menu_text" />
    <item
        android:id="@+id/basket"
        android:enabled="true"
        android:icon="@drawable/ic_16_basket"
        android:title="@string/basket_text" />

    <item
        android:id="@+id/orders"
        android:enabled="true"
        android:icon="@drawable/ic_20_order"
        android:title="@string/order_text" />

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_16_profile"
        android:title="@string/profile_text" />

    <item
        android:id="@+id/about"
        android:enabled="true"
        android:icon="@drawable/ic_24_info"
        android:title="@string/about_text" />

</menu>